# translatabase

./: Cargo.toml  LICENSE  README.md  Rocket.toml
src/: create.sql  main.rs
www/: app.html  app.js  langs.html  langs.js  style.css  word_classes.html  word_classes.js
