[package]
authors = ["Jonathan Sharman <jonathan.sharman@gmail.com>"]
edition = "2018"
name = "translatabase"
version = "0.1.0"

[dependencies]
log = "0.4"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket_sync_db_pools = {version = "0.1.0-rc.1", features = ["sqlite_pool"]}
serde = {version = "1.0", features = ["derive"]}
webbrowser = "0.5"

[dependencies.rusqlite]
features = ["bundled"]
version = "0.25"
